k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finbank-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finbank-backend
  template:
    metadata:
      labels:
        app: finbank-backend
    spec:
      containers:
      - name: backend
        image:  476898871280.dkr.ecr.us-east-1.amazonaws.com/finbank-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

        # Use Secret for DB credentials
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10

        # Liveness Probe
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20

        # Resource Limits
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
