k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finbank-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finbank-frontend
  template:
    metadata:
      labels:
        app: finbank-frontend
    spec:
      containers:
      - name: frontend
        image: 476898871280.dkr.ecr.us-east-1.amazonaws.com/finbank-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
