k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finbank-backend-service
spec:
  type: NodePort
  selector:
    app: finbank-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
