k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finbank-frontend-service
  namespace: finbank
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
