k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finbank-frontend-service
spec:
  type: NodePort
  selector:
    app: finbank-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
