k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finbank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: finbank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finbank-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finbank-backend-service
                port:
                  number: 8000
